--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: bengo
     env: ruby
     buildCommand: bundle install
-    startCommand: bundle exec rails server -p $PORT
+    startCommand: bundle exec rails db:migrate db:seed && bundle exec rails server -p $PORT
     envVars:
       - key: RAILS_ENV
         value: production
@@ -12,11 +12,6 @@ services:
     healthCheckPath: /your_health_check_path
     autoDeploy: true
     numInstances: 1
-    cpu: 0.25
-    memory: 0.5GB
 
 databases:
-  - name: your-app-name-db
-    type: postgres
-    version: 12
-    diskSize: 5GB
+  - name: bengo_db
